k8s/blueprints/ente-server/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ente-server
spec:
  hostnames:
    - ente-server.developer-friendly.blog
    - ente.meysam.io
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: global
      namespace: cert-manager
      sectionName: http
  rules:
    - backendRefs:
        - kind: Service
          name: ente-server
          port: 80
      filters:
        - responseHeaderModifier:
            set:
              - name: Strict-Transport-Security
                value: max-age=31536000; includeSubDomains; preload
          type: ResponseHeaderModifier
      matches:
        - path:
            type: PathPrefix
            value: /
    - backendRefs:
        - kind: Service
          name: ente-server
          port: 80
      filters:
        - responseHeaderModifier:
            set:
              - name: Strict-Transport-Security
                value: max-age=31536000; includeSubDomains; preload
          type: ResponseHeaderModifier
      matches:
        - path:
            type: Exact
            value: /api/live/ws
